# clock

./: .gitignore  README.md
KiCad/: Clock.kicad_pcb  Clock.kicad_pro  Clock.kicad_sch  Display.kicad_sch  fp-lib-table  ibom.config.ini  sym-lib-table
KiCad/Lib/: README.md  RPi_Pico.kicad_sym
KiCad/Lib/BatteryHolder_Keystone_1012_2xAA/: BatteryHolder_Keystone_1012_2xAA.kicad_mod  BatteryHolder_Keystone_1012_2xAA.step
KiCad/Lib/Custom/: Custom.kicad_sym  MouseBites_2x05mm.kicad_mod  MouseBites_3x05mm.kicad_mod  TouchPad.kicad_mod
KiCad/Lib/RPi_Pico.pretty/: RPi_Pico_SMD.kicad_mod  RPi_Pico_SMD_TH.kicad_mod
KiCad/bom/: ibom.html
fw/: .gitignore  Cargo.toml
fw/app/: Cargo.toml  flash.gdb
fw/app/.cargo/: config.toml
fw/app/src/: display.rs  main.rs  uptime.rs  uptime_delay.rs
fw/lib/app-core/: Cargo.toml
fw/lib/app-core/src/: action.rs  features.rs  lib.rs  scheduler.rs  state.rs  task.rs
fw/lib/app-core/src/features/: charger.rs  display.rs
fw/lib/app-core/src/task/: task.rs
fw/lib/seg-disp/: Cargo.toml
fw/lib/seg-disp/src/: char7dp.rs  char7dp_seq.rs  disp.rs  lib.rs
