[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app-core = { path = "../lib/app-core" }
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embedded-alloc = "0.5.0"
embedded-hal = "0.2.7"
fugit = { workspace = true }
rp-pico = "0.7.0"
# rtt-target v0.4.0 is unusable due to https://github.com/probe-rs/rtt-target/issues/33
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
seg-disp = { path = "../lib/seg-disp" }
